--- a/source/greenrope.html.erb
+++ b/source/greenrope.html.erb
@@ -23,7 +23,7 @@ title: GreenRope Project
         <h2>Deep Dive: Dashboard</h2>
         <p>I felt an appropriate area to begin our design update was our dashboard. Like most dashboards, the main focus was to aggregate and provide the user the necessary data overview. Seeing as this is the first landing point for all users, I wanted this area to set the standard and tone for the rest of the UI.</p>
         <h3>UX Process | Audit</h3>
-        <p>During our review of the current dashboard, I first cross referenced any feature request tickets we had to give myself a more wholesome foundation to approach the redesign. After taking those requests into consideration, I then began to create a few user personas to best understand the wants and needs of our user base.After reviewing with my CEO, we categorized the majority of our users in two sections:
+        <p>During our review of the current dashboard, I first cross referenced any feature request tickets we had to give myself a more wholesome foundation to approach the redesign. After taking those requests into consideration, I then began to create a few user personas to best understand the wants and needs of our user base. After reviewing with my CEO, we categorized the majority of our users in two sections:
             <ul>
                 <li><span style="font-weight:700">Account Owner:</span> These are the primary account holders. They are able to review all the account activity and data associated with every user they may have.</li>
                 <li><span style="font-weight:700">Account User:</span> These users can range from salespersons to marketing specialist. The type of information they view review is relevant to their personal KPIs. </li>
@@ -38,7 +38,37 @@ title: GreenRope Project
 
     <div class="text-content">
         <h3>Design</h3>
-        <p><%=lorem.sentences 5 %></p>
+        <p>After completing the user personas, I then began sketching up some initial ideas. My focus was set on eliminating the need to scroll as much as I could.</p>
+    </div>
+    <!-- Image Block -->
+    <div>
+        <img alt="Greenrope Sketches" src="/images/greenrope/sketches.png">
+        <figcaption>Initial sketches</figcaption>
+
+        <img alt="Greenrope Dashboard `" src="/images/greenrope/gr-dash.png">
+        <figcaption>Dashboard Update: Working with layout options</figcaption>
+
+        <img alt="Greenrope Dashboard 2" src="/images/greenrope/gr-dash2.png">
+        <figcaption>Dashboard Update: Includes actual widgets and overlay mockup</figcaption>
+
+        <img alt="Greenrope Navigation Update" src="/images/greenrope/gr-nav.png">
+        <figcaption>Old Navigation vs. New Navigation</figcaption>
+        <img alt="Greenrope Newsfeed" src="/images/greenrope/newsfeed.png">
+        <figcaption>Example of the ToDo list widget design update</figcaption>
+    </div>
+
+
+    <div class="text-content">
+        <h3>Reflection</h3>
+        <p>After completing the user personas, I then began sketching up some initial ideas. My focus was set on eliminating the need to scroll as much as I could.</p>
+    </div>
+
+    <div class="text-content">
+        <h2>Deep Dive: Mobile App</h2>
+        <p>While the desktop client was receiving a global style update, we found this a good opportunity to revamp our mobile application. Seeing as the mobile had not received any major styling update since its creation several years ago, we found this a good opportunity to create some consistency between the mobile and desktop experiences.</p>
+        <h3>Prioritization</h3>
+        <p>While the mobile experience was limited in terms of functionality compared to the desktop experience, we decided based on the limited development time to focus on the design first before addressing bigger functionality requests.</p>
+        <img src="/images/greenrope/icon-demo.png">
     </div>
     
 <!-- End Project Container -->    
