update to all content

--- a/source/greenrope.html.erb
+++ b/source/greenrope.html.erb
@@ -8,7 +8,7 @@ title: GreenRope Project
 </div>
 <div class="project-content">
     
-    <div class="text-content">
+    <div class="text-block">
         <p><span style="font-weight: 700;">Position:</span> Product Designer | <span style="font-weight: 700;">Team:</span> CEO, COO, CTO, Product Designer</p>
         <h2>Project Overview</h2>
         <p>During my time at GreenRope, my primary focus was addressing design consistency throughout the platform. When moving through the platform, there was a disconnect between feature areas which would lead to user frustrations. The main objective was to identify the various differences from feature to feature and implement a new design to eliminate any disjunction.</p>
@@ -36,7 +36,7 @@ title: GreenRope Project
         <img alt="Greenrope User Personas" src="/images/greenrope/gr-userpersonas.png">
     </div>
 
-    <div class="text-content">
+    <div class="text-block">
         <h3>Design</h3>
         <p>After completing the user personas, I then began sketching up some initial ideas. My focus was set on eliminating the need to scroll as much as I could.</p>
     </div>
@@ -44,31 +44,104 @@ title: GreenRope Project
     <div>
         <img alt="Greenrope Sketches" src="/images/greenrope/sketches.png">
         <figcaption>Initial sketches</figcaption>
+    </div>
 
+    <div class="text-block">
+       <p> With the outline sketches in place, I then moved on to translating the redesign into Sketch. Seeing as I wanted to give the user the ability to select which layout suited their needs the best, I mocked up potential layout options. From there, I added in some demo widgets to give a cohesive representation of how the dashboard will look filled out.</p>
+    </div>
+
+    <div>
         <img alt="Greenrope Dashboard `" src="/images/greenrope/gr-dash.png">
         <figcaption>Dashboard Update: Working with layout options</figcaption>
 
         <img alt="Greenrope Dashboard 2" src="/images/greenrope/gr-dash2.png">
         <figcaption>Dashboard Update: Includes actual widgets and overlay mockup</figcaption>
+    </div>
 
+    <div class="text-block">
+        <p>Below is a comparison of the old navigation compared with the new navigation. I wanted to reduce the amount of clutter and increase the contrast to make the navigation elements stand out more. Seeing as the application is fairly large, I didn’t want our users to get confused on where to navigate. Using feedback from our support staff, I was able to address a common frustration felt by our users.</p>
+    </div>
+
+    <div>
         <img alt="Greenrope Navigation Update" src="/images/greenrope/gr-nav.png">
         <figcaption>Old Navigation vs. New Navigation</figcaption>
+    </div>
+
+    <div class="text-block">
+        <p>Here is a close up of our Todo list widget. The primarily function of this widget is to notify the user of current, upcoming, or overdue CRM activities. Before the update, the data was just presented in list form with the most recent activity at the top. You were not able to get a clear sense of when the activity needed to be completed. I catered the update to allow the user to clearly see when and what activities needed to be addressed.</p>
+    </div>
+
+    <div>
         <img alt="Greenrope Newsfeed" src="/images/greenrope/newsfeed.png">
         <figcaption>Example of the ToDo list widget design update</figcaption>
     </div>
 
-
-    <div class="text-content">
-        <h3>Reflection</h3>
-        <p>After completing the user personas, I then began sketching up some initial ideas. My focus was set on eliminating the need to scroll as much as I could.</p>
+    <div class="text-block">
+        <h3>Dashboard: Reflection</h3>
+        <p>Having the dashboard be my first project after joining GreenRope was an immense learning experience. Being the first touch point of the software, I set high expectations for myself to deliver a design which provided a fresh and modern feel.</p>
+        <p>Before I came aboard, there were no set process for designing and implementing a new feature within the platform. I was able to establish a design process which took a more holistic approach to updating parts of the software:
+            <ul>
+                <li>Audit existing feature</li>
+                <li>Cross reference with feature request tickets to address potential UX concerns</li>
+                <li>Create user personas and relevant use cases</li>
+                <li>Go through design process on Sketch</li>
+                <li>If necessary, create rapid HTML/CSS/JS prototype</li>
+            </ul>
+        </p>
+        <p> I was able to carry out this process on subsequent projects allowing there to be a cohesive and consistent design language with every feature update.</p>
+        <h3>Additional Examples</h3>
+        <p>Instead of walking through the other design updates, feel free to take a look at some of the rapid prototypes I created. I found it helped speed along the deployment of our updates if I wrote the HTML/CSS skeleton for the feature. I would then hand that over to one of our developers and we would work together to polish the design with all of the necessary data plugged into it. Keep in mind these are not the final product, but they are a good representation of the direction we ended up going.</p>
+        <div class="codepen-examples">
+            <button class="primary-btn">
+                <a href="https://codepen.io/nickbokaie/pen/zpPvLB" target="_blank">Example 1</a></button>
+            <button class="primary-btn">
+                <a href="https://codepen.io/nickbokaie/pen/rpYepQ" target="_blank">Example 2</a>
+            </button>
+            <button class="primary-btn">
+                <a href="https://codepen.io/nickbokaie/pen/MrOyzz" target="_blank">Example 3</a>
+            </button>
+        </div>
     </div>
 
-    <div class="text-content">
+    <div class="text-block">
         <h2>Deep Dive: Mobile App</h2>
         <p>While the desktop client was receiving a global style update, we found this a good opportunity to revamp our mobile application. Seeing as the mobile had not received any major styling update since its creation several years ago, we found this a good opportunity to create some consistency between the mobile and desktop experiences.</p>
         <h3>Prioritization</h3>
         <p>While the mobile experience was limited in terms of functionality compared to the desktop experience, we decided based on the limited development time to focus on the design first before addressing bigger functionality requests.</p>
+        <p>I first began by giving our app icon a refresh. The original app icon was outdated and referenced a design that was no longer used on the web application. I felt our “GreenRope” logo was too long to use within an app icon, and the we didn’t need to include “CRM” as well. Users who will use the app know it is a CRM, they don’t need the reminder every time they look at the logo. From there I used our current color palette and came up with the two options below. We ended up going with the white background option as it stood out more when placed around other app icons.</p>
         <img src="/images/greenrope/icon-demo.png">
+    </div>
+
+    <div class="text-block">
+        <h3>Old UI</h3>
+        <p>Like the old logo, the UI of the mobile app before the refresh referenced a style that was no longer used. It was a struggle to navigate around the app, as it had no global navigation. This often led to a lot of back and forth movement between pages trying to remind yourself of where you were within the app.</p>
+    </div>
+
+    <!-- Old Mobile UI -->
+    <div>
+        <img alt="Old Mobile UI" src="/images/greenrope/old-mobile.jpg">
+        <figcaption>Left: Main Navigation / Dashboard. Right: Example of a contact record</figcaption>
+    </div>
+
+    <div class="text-block">
+        <h3>New UI: Contact Record Use Case</h3>
+        <p>In addition to updating the design of the app, I wanted to make sure the user knew where they were at all times. I used a combination of hierarchical and flat type navigation to give the user a straightforward and simple approach to moving throughout the app. For example, within the contact record use case below, the user is able to navigate to a specific contact hierarchically. Once they are within that particular contact record, the user is then directed to use the flat sub navigation to interact with the various categories. I found this approach to be the most effective when having to deal with the amount of data we display at any given point in the app.</p>
+    </div>
+
+    <!-- Mobile Images -->
+    <div>
+        <img alt="Mobile 1" src="/images/greenrope/mobile1.png">
+        <figcaption>Left: Updated Dasboard | Middle:Updated Navigation | Right: Updated Contact List </figcaption>
+    </div>
+
+    <div>
+        <img alt="Mobile 2" src="/images/greenrope/mobile2.png">
+        <figcaption>Example of an updated contact record flow</figcaption>
+    </div>
+
+    <div class="text-block">
+        <h3>Mobile App: Reflection</h3>
+        <p>Being the only designer on our small team, I was disappointed that we didn’t have enough time or resources to give the mobile app the true refresh and update it deserved. It was a tough challenge to have to hold back on pushing designs through that addressed common complaints from our users. Because we had limited time alloted for our only developer who maintained the mobile app, each design update had to be cognisant of his time. However, given the constraints we had, I was proud of our effort to bring the mobile app into the same design language of our web application. Seeing as consistency was the main motivating factor, I felt we laid a solid foundation to work from should more resources be available in the future.</p>
     </div>
     
 <!-- End Project Container -->    
