--- a/source/partials/_gr-item.erb
+++ b/source/partials/_gr-item.erb
@@ -1,8 +1,7 @@
 <section class="section-padding">
-    <div class="gr-dash-item">
-        <img alt="dashboard image" src="images/gr-mac.png" />
+    <div class="dash-item">
+        <a href="/greenrope.html">
+            <img alt="Ziprent Graphic" src="/images/greenrope/greenrope-main.png">
+        </a>
     </div>
-    <h2>GreenRope</h2>
-    <h3>Product Designer at a CRM company focusing on small to midsizes businesses</h3>
-    <a href="/greenrope.html"<%= partial 'partials/button' %></a>
 </section>
