--- a/source/partials/_header.erb
+++ b/source/partials/_header.erb
@@ -19,7 +19,7 @@
                 <li><%= link_to 'Ziprent', '/ziprent.html' %></li>
                 <li><%= link_to 'Sailors Grave', '/sailorsgrave.html' %></li>
             </ul>
-        <%= link_to 'Resume', '/about.html' %>
+        <%= link_to 'Resume', 'https://standardresume.co/nicholasbokaie' %>
         <%= link_to 'About', '/about.html' %>
     </nav>
 </header>
