--- a/source/partials/_sgtg-item.erb
+++ b/source/partials/_sgtg-item.erb
@@ -1,8 +1,7 @@
 <section class="section-padding">
-    <div class="sgtg-dash-item">
-        <img alt="Gr Dashboard" src="/images/gr-mac.png"/>
+    <div class="dash-item">
+        <a href="/sailorsgrave.html">
+            <img alt="SGTG Graphic" src="/images/sgtg/sgtg-main.png">
+        </a>
     </div>
-    <h2>Sailors Grave Tattoo Gallery</h2>
-    <h3>Product Designer for a tattoo shop located in San Diego</h3>
-    <a href="/sailorsgrave.html"><%= partial 'partials/button' %></a>
 </section>
