--- a/source/partials/_ziprent-item.erb
+++ b/source/partials/_ziprent-item.erb
@@ -1,10 +1,9 @@
 <section class="section-padding">
-    <div class="ziprent-dash-item">
-        <img alt="Gr Dashboard" src="/images/gr-mac.png"/>
+    <div class="dash-item">
+        <a href="/ziprent.html">
+            <img alt="Ziprent Graphic" src="/images/ziprent/ziprent-main.png">
+        </a>
     </div>
-    <h2>Ziprent</h2>
-    <p>Product Designer at a CRM company focusing on small to midsizes businesses</p>
-    <a href="/ziprent.html"<%= partial 'partials/button' %></a>
 </section>
 
 
