Update to website copy

--- a/source/greenrope.html.erb
+++ b/source/greenrope.html.erb
@@ -38,7 +38,7 @@ title: GreenRope Project
 
     <div class="text-block">
         <h3>Design</h3>
-        <p>After completing the user personas, I then began sketching up some initial ideas. My focus was set on eliminating the need to scroll as much as I could.</p>
+        <p>After completing the user personas, I then began sketching up some initial ideas. My focus was set on eliminating the need to scroll as much as I could. The original dashboard forced the user to scroll a significant amount to get view the various dashboard elements. </p>
     </div>
     <!-- Image Block -->
     <div>
@@ -105,7 +105,7 @@ title: GreenRope Project
 
     <div class="text-block">
         <h2>Deep Dive: Mobile App</h2>
-        <p>While the desktop client was receiving a global style update, we found this a good opportunity to revamp our mobile application. Seeing as the mobile had not received any major styling update since its creation several years ago, we found this a good opportunity to create some consistency between the mobile and desktop experiences.</p>
+        <p>While the desktop client was receiving a global style update, we found this a good opportunity to revamp our mobile application. Seeing as the mobile had not received any major styling update since its creation several years ago, we found this an appropriate time to create some consistency between the mobile and desktop experiences.</p>
         <h3>Prioritization</h3>
         <p>While the mobile experience was limited in terms of functionality compared to the desktop experience, we decided based on the limited development time to focus on the design first before addressing bigger functionality requests.</p>
         <p>I first began by giving our app icon a refresh. The original app icon was outdated and referenced a design that was no longer used on the web application. I felt our “GreenRope” logo was too long to use within an app icon, and the we didn’t need to include “CRM” as well. Users who will use the app know it is a CRM, they don’t need the reminder every time they look at the logo. From there I used our current color palette and came up with the two options below. We ended up going with the white background option as it stood out more when placed around other app icons.</p>
