--- a/source/sailorsgrave.html.erb
+++ b/source/sailorsgrave.html.erb
@@ -11,7 +11,7 @@ title: Sailors Grave Project
     <div class="text-block">
         <p><span style="font-weight: 700;">Position:</span> Product Designer | <span style="font-weight: 700;">Team:</span> Shop Owner, Product Designer</p>
         <h3>Project Overview</h3>
-        <p>TThis project was my final assignment at UCSD within the HCI (Human Computer Interaction) department. The goal of the project was to reach out to a local business and offer to completely redesign their existing website. The scope of the project was only to focus on the redesign, not actually building the site for them. We could offer that, but only once the project was finished.</p>
+        <p>This project was my final assignment at UCSD within the HCI (Human Computer Interaction) department. The goal of the project was to reach out to a local business and offer to completely redesign their existing website. The scope of the project was to soley focus on the redesign, not the developement of the site. We could offer that, but only once the project was finished.</p>
         <p>I chose to reach out to Sailors Grave Tattoo Gallery since I had just gotten a tattoo from them. Seeing as tattooing is inherently design centric, I figured it would be a unique project to combine tattooing and web design. They were enthusiastically receptive and were a fantastic business to work with.
         </p>
         <h3>UX Process</h3>
@@ -22,6 +22,15 @@ title: Sailors Grave Project
                 <li>Brand | Audience | Image</li>
             </ul>
         </p>
+
+        <p>One of his main concerns on his current site was artist visibility. He felt his current site did not give his employees adequate space. He also wanted to move away from using a dark color palette and provide a more welcoming atmosphere.</p>
+
+        <p>For the new design, he wanted the site to focus on highlighting the artist and their work. Ultimately the tattoos are going to speak for themselves. He did want to distract potential users from easily looking through them.</p>
+
+        <p>As for his target audience:</p>
+        <blockquote>
+            "When I see two people, one with a sleeve of tattoos and one without, I will always go talk to the one without[...]I want to be that tattoo artist that can make a person without tattoos feel comfortable getting something by me." - Gary Koblis, Shop Owner
+        </blockquote>
         
         <p>Having established the  expectations of the shop owner,  I then set out to understand the various types of customers. I conducted surveys at the tattoo shop over the course of several weekends and was able to categorize the majority of interviewees into three types of user personas:
             <ul>
@@ -106,12 +115,6 @@ title: Sailors Grave Project
         <figcaption>Alternative Artist Profile Page | Lightbox Example</figcaption>
     </div>
 
-    <div class="text-block">
-        <blockquote>
-            "When I see two people, one with a sleeve of tattoos and one without, I will always go talk to the one without[...]I want to be that tattoo artist that can make a person without tattoos feel comfortable getting something by me." - Gary Koblis, Shop Owner
-        </blockquote>
-    </div>
-
     <div>
         <img alt="Third high fidelity wireframe" src="/images/sgtg/hi-fi-3.png">
         <figcaption>Contact page | FAQ | Aftercare</figcaption>
@@ -120,7 +123,7 @@ title: Sailors Grave Project
     <div class="text-block">
         <h3>Project Reflection</h3>
         <p>Looking back, I would have liked to develop the site myself but given the time constraints of the class and project I was ok giving the finished designs over to the shop owner and letting him use them however he saw fit.</p>
-        <p>However, being my first design project, this was a tremendous learning experience. It gave me valuable insight into the immense work you have to put in to great a website. Everything from conducting user surveys and creating user personas to selecting font combinations allowed me see how all of those factors play a vital role in the ultimate design of not only a website but a product. </p>
+        <p>However, being my first design project, this was a tremendous learning experience. It gave me valuable insight into the immense work you have to put in to great a website. Everything from conducting user surveys and creating user personas to creating effective layouts allowed me see how all of those factors play a vital role in the ultimate design of not only a website but a product.</p>
     </div>
 
 </div>
