Fixed URL extension on homepage partials

--- a/source/partials/_gr-item.erb
+++ b/source/partials/_gr-item.erb
@@ -1,6 +1,6 @@
 <section class="section-padding">
     <div class="dash-item">
-        <a href="/greenrope.html">
+        <a href="/greenrope">
             <img alt="Ziprent Graphic" src="/images/greenrope/greenrope-main.png">
         </a>
     </div>
