--- a/source/partials/_ziprent-item.erb
+++ b/source/partials/_ziprent-item.erb
@@ -1,6 +1,6 @@
 <section class="section-padding">
     <div class="dash-item">
-        <a href="/ziprent.html">
+        <a href="/ziprent">
             <img alt="Ziprent Graphic" src="/images/ziprent/ziprent-main.png">
         </a>
     </div>
