--- a/source/partials/_sgtg-item.erb
+++ b/source/partials/_sgtg-item.erb
@@ -1,6 +1,6 @@
 <section class="section-padding">
     <div class="dash-item">
-        <a href="/sailorsgrave.html">
+        <a href="/sailorsgrave">
             <img alt="SGTG Graphic" src="/images/sgtg/sgtg-main.png">
         </a>
     </div>
