Updated header with new logo and css

--- a/source/partials/_header.erb
+++ b/source/partials/_header.erb
@@ -1,6 +1,6 @@
 <header>
     <div class="logo">
-       <a href="/"><img alt="main logo" src="/images/newlogo.svg"/></a>
+       <a href="/"><img alt="main logo" src="/images/newlogo.png"/></a>
     </div>
 
     <input type="checkbox" id="navcheck" role="button" title="menu">
