--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -2,7 +2,7 @@
 title: Nicholas Bokaie's Portfolio
 ---
 <div class="hero">
-  <h1>Product Designer located in the Bay Area</h1>
+  <h1>Product Designer | Bay Area</h1>
 </div>
 
 <%= partial 'partials/gr-item' %>
