--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -9,7 +9,7 @@
     <title><%= current_page.data.title || "Nick Bokaie Portfolio" %></title>
     <%= stylesheet_link_tag "site" %>
     <%= javascript_include_tag "site" %>
-    <link rel="icon" type="image/png" href="images/favicon.png" />
+    <link rel="icon" href="images/favicon.ico" />
   </head>
   <body>
     <%= partial 'partials/header' %>
